--- a/app.json
+++ b/app.json
@@ -31,6 +31,14 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "e3495645-8657-4385-8ddf-080f1e7d0f16"
+      }
     }
   }
 }
